Align input fields correctly on orders page
The margin-top is not needed here. It will be added where needed in a separate commit.

--- a/app/webpacker/css/admin_v3/shared/forms.scss
+++ b/app/webpacker/css/admin_v3/shared/forms.scss
@@ -316,7 +316,6 @@ select {
 .inline-checkbox {
   display: inline-flex;
   align-items: center;
-  margin-top: 3px;
 
   input,
   label {
